[package]
name = "crab-kafka"
version = "0.0.10"
edition = "2024"
authors = ["Flavio Bizzarri <fl.bizzarri@gmail.com>"]
license = "Apache-2.0"
description = "Forward <TCP|UDP> + TLS traffic to kafka"
readme = "README.md"
homepage = "https://github.com/newfla/crab-kafka"
repository = "https://github.com/newfla/crab-kafka"
keywords = ["kafka", "udp", "tcp", "tls"]
categories = ["network-programming", "asynchronous"]

[dependencies]
log = "0.4"
derive_builder= "0.20"
fastrand = "2.0"
ustr = "1.1"
cached = "0.55"
byte-unit = "5.1"
itertools = "0.14"
coarsetime = "0.1"
derive-new = "0.7"
nohash-hasher = "0.2"
kanal = "0.1.1"
tokio = { version = "1.45", features = ["full"] }
tokio-util = "0.7"
rdkafka = { version = "0.37", features = ["cmake-build","zstd-pkg-config","ssl","gssapi"] }
tokio-native-tls = "0.3"
tokio-dtls-stream-sink = "0.6"
openssl = { version = "0.10", features = ["vendored"] }
socket2 = "0.5"
anyhow = "1.0"

[dev-dependencies]
mimalloc = { version = "0.1", default-features = false }
utilities = {path = "examples/udp_to_kafka/utilities"}

[profile.release]
lto = true
strip = true
panic = "abort"

[workspace]

[[example]]
name = "udp_to_kafka"
path = "examples/udp_to_kafka/src/main.rs"
